# Django-Tutorial

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  create_samples.py  manage.py  mypy.ini  post_data.json  pyproject.toml  requirements.txt  samples.json
Blog/: asgi.py  settings.py  urls.py  wsgi.py
DjangoTutorial/: asgi.py  settings.py  urls.py  wsgi.py
post/: admin.py  models.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_alter_post_title.py  0003_subtitle_alter_post_title_delete_title_subtitle_post.py
