[tool.poetry]
name = "kyo-django-tutorial"
version = "0.1.0"
description = ""
authors = ["kyo <odinxp@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kyo_django_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100  # 預設值是 88
skip-string-normalization = 1  # 不強制把單引號變成雙引號

[tool.isort]
line_length = 100
