[tool.poetry]
name = "Django Tutorial"
version = "0.1.0"
description = ""
authors = ["kyo <odinxp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
