[tool.poetry]
name = "Django Tutorial"
version = "0.1.0"
description = ""
authors = ["kyo <odinxp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.15.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ruff = "0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.10" #影響pyupgrade檢查與自動修正的版本

[tool.ruff]  # https://docs.astral.sh/ruff/settings/#top-level
line-length = 100
exclude = ["**/migrations/", "**/manage.py"]

[tool.ruff.lint]  # https://docs.astral.sh/ruff/settings/#lint
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
]
ignore = [
    "E402",  # module level import not at top of file
]

[tool.ruff.format]  # https://docs.astral.sh/ruff/settings/#format
quote-style = "single"
